--- a/motherload/client/partials/home.html
+++ b/motherload/client/partials/home.html
@@ -34,11 +34,15 @@
               <th class="third"> &nbsp; </th>
             </thead>
 
-            <tr ng-repeat=" bldg in allBuildings | orderBy:'long_state' | filter:search ">
-              <td>{{bldg.long_state}}, {{bldg.city}}</td>
-              <td class="centered">{{bldg.name}}</td>
+            <tr ng-repeat=" bldg in allBuildings | orderBy:'long_state' | filter:search "
+            ng-click="setBldg(bldg._id, bldg.floors)">
+              <td> {{bldg.long_state}}, {{bldg.city}}</td>
+              <td class="centered">
+                <a ng-click="setBldg(bldg._id, bldg.floors)" href="/viewFloors" class="btn btn-link padding-less" title="View Floor">
+                  {{bldg.name}}
+                </a>
+              </td>
               <td class="right">
-                <a ng-click="setBldg(bldg._id, bldg.floors)" href="/viewFloors" class="btn btn-link padding-less"> View Floors </a> 
                 <a ng-click="delBldg(bldg._id, bldg.name)" 
                    class="btn btn-danger padding-less">
                    <em class="fas fa-trash-alt"></em>
