--- a/motherload/client/partials/viewFloors.html
+++ b/motherload/client/partials/viewFloors.html
@@ -31,13 +31,13 @@
 
           <table class="table table-striped table-hover">
             <thead>
-              <th class="twoha"> Name </th>
-              <th class="twoha centered"> <!-- Edit --> </th>
-              <th class="twoha right"> Navigate </th>
+              <th class="third"> Name </th>
+              <th class="third centered"> <!-- Edit --> </th>
+              <th class="third"> Open </th>
+              <th class="third right"> Delete </th>
             </thead>
 
-            <!-- <tr ng-repeat=" floor in $root.bldgFloors | orderBy:'name' "> -->
-            <tr ng-repeat=" floor in bldgFloors | orderBy:'name' ">
+            <tr ng-repeat=" floor in bldgFloors ">
               <td>{{floor.name}}</td>
 
               <td class="centered">
@@ -48,23 +48,16 @@
                  -->
               </td>
 
+              <td class="">                 
+                <a href="/vr?bldg={{currentBldgId}}&floor={{$index}}" title="Navigate to this room in VR" target="_blank">
+                <em class="fas fa-external-link-alt" style="color: black"></em></a> &nbsp; &nbsp; &nbsp;
+              </td> 
+
               <td class="right">
-                <!-- &room=0 -->
-                <a href="/vr?bldg={{currentBldgId}}&floor={{$index}}&room=0"
-                   title="Navigate to this room in VR" target="_blank">
-                <em class="fas fa-external-link-alt" style="color: black"></em></a>
-                &nbsp;
-                &nbsp;
-                &nbsp;
-                <!-- 
-                <button ng-click="delFloor(floor.hash, floor.name)" 
-                   class="btn btn-danger padding-less">
-                   <em class="fas fa-trash-alt"></em>
-                 </button>
-                 -->
+                <button ng-click="delFloor(floor.hash, floor.name)" class="btn btn-danger padding-less right">
+                  <em class="fas fa-trash-alt"></em> </button>
               </td>
             </tr>
-
           </table>
         </div>
       </div>
